sandbox/output
TicketDispenserTest.java:49: error: method the_dispenser_should_print_a_ticket_with_a_given_turn_number() is already defined in class TicketDispenserTest
    public void the_dispenser_should_print_a_ticket_with_a_given_turn_number(){
                ^
1 error
